Add linea di costa to render

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <!--CSS-->
     <link rel="stylesheet" href="style.css" />
 
+    <!--Our Script-->
+    <script src="data/LineadiCosta.js"></script>
+    <script src="map.js"></script>
+
     <title>Coastal Vulnerability @ Waterfest</title>
 </head>
 <header>
@@ -28,7 +32,6 @@
     <div class="container-fluid d-flex p-4" style="min-height: 100vh;">
         <div class="row flex-fill">
             <div id="map"></div>
-            <script src="map.js"></script>
         </div>
     </div>
 </body>
