Add wind and waves for base scenario

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!--Our Script-->
-    <script type="module" src="map.js"></script>
+    <script src="map.js"></script>
 
     <title>Coastal Vulnerability @ Waterfest</title>
 </head>
