--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <head>
     <meta charset="utf-8">
 
-    <!--Bootstrapt-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <!--jQuery-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -20,9 +16,6 @@
         integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
         crossorigin=""></script>
 
-    <!--CSS-->
-    <link rel="stylesheet" href="style.css" />
-
     <!--Our Script-->
     <script src="map.js"></script>
 
@@ -31,12 +24,8 @@
 <header>
 </header>
 
-<body>
-    <div class="container-fluid d-flex p-4" style="min-height: 100vh;">
-        <div class="row flex-fill">
-            <div id="map"></div>
-        </div>
-    </div>
+<body style="margin: 0;">
+    <div id="map" style="min-height: 100vh;"></div>
 </body>
 
 <footer>
